deploy selasa sore

--- a/layouts/partials/essentials/style.html
+++ b/layouts/partials/essentials/style.html
@@ -71,6 +71,8 @@
   integrity="{{ $styles.Data.Integrity }}"
   rel="stylesheet" />
 
+<link rel="stylesheet" href="/css/style.css" />
+
 <!-- link lazy style -->
 <link
   defer
