--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,5 +1,8 @@
 /* Add your own custom styles here */
-
+/* Custom CSS Anda */
+.custom-button {
+  @apply bg-blue-500 text-white py-2 px-4 rounded;
+}
 .content {
   @apply prose-h1:text-3xl md:prose-h1:text-h1-sm;
   @apply prose-h2:text-2xl md:prose-h2:text-h2-sm;
